[gd_scene load_steps=11 format=3 uid="uid://bb0qxkgwbx5xc"]

[ext_resource type="Script" uid="uid://bmw6lvpdpokau" path="res://frontend/game.gd" id="1_qfs6o"]
[ext_resource type="PackedScene" uid="uid://b0v2ttp4dudf4" path="res://frontend/board/board_node.tscn" id="2_b7sum"]
[ext_resource type="Material" uid="uid://0t2e58d2d0c" path="res://frontend/vfx/bg_dust_particle_process_material.tres" id="2_uh1ml"]
[ext_resource type="PackedScene" uid="uid://ciq1rdvbmn1wg" path="res://frontend/camera/game_camera.tscn" id="3_bh0d3"]
[ext_resource type="Texture2D" uid="uid://bl0xqb50vkq8q" path="res://assets/ui/panel-030.png" id="3_dry2n"]
[ext_resource type="PackedScene" uid="uid://b3qdrbapth2jx" path="res://frontend/ui/upgrade_select_ui.tscn" id="4_g2u0c"]

[sub_resource type="Gradient" id="Gradient_0lynk"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(0.780392, 0.772549, 0.764706, 0.121569)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_pnr3g"]
gradient = SubResource("Gradient_0lynk")
width = 32
height = 32

[sub_resource type="Environment" id="Environment_xnp5u"]
background_mode = 1
background_color = Color(0.337754, 0.288089, 0.552513, 1)

[sub_resource type="LabelSettings" id="LabelSettings_pfcdr"]
font_size = 80

[node name="Game" type="Node2D"]
script = ExtResource("1_qfs6o")

[node name="DecorLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="GPUParticles2D" type="GPUParticles2D" parent="DecorLayer"]
position = Vector2(-99, 202)
amount = 14
texture = SubResource("GradientTexture2D_pnr3g")
lifetime = 4.0
preprocess = 0.1
explosiveness = 0.11
randomness = 0.06
process_material = ExtResource("2_uh1ml")

[node name="BoardNode" parent="." instance=ExtResource("2_b7sum")]

[node name="GameCamera" parent="." instance=ExtResource("3_bh0d3")]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_xnp5u")

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="SettingsButton" type="Button" parent="UILayer"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -230.0
offset_top = -90.0
offset_right = -50.0
offset_bottom = -50.0
grow_horizontal = 0
grow_vertical = 0
size_flags_vertical = 4
text = "Settings"

[node name="GameOverLayer" type="CanvasLayer" parent="."]

[node name="Rect" type="NinePatchRect" parent="GameOverLayer"]
visible = false
self_modulate = Color(0, 0, 0, 0.647059)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 100.0
offset_top = 100.0
offset_right = -100.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
texture = ExtResource("3_dry2n")
patch_margin_left = 24
patch_margin_top = 24
patch_margin_right = 24
patch_margin_bottom = 24

[node name="H" type="VBoxContainer" parent="GameOverLayer/Rect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 572.0
offset_right = -571.0
offset_bottom = -163.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
theme_override_constants/separation = 80
alignment = 1

[node name="Label" type="Label" parent="GameOverLayer/Rect/H"]
layout_mode = 2
text = "You win!"
label_settings = SubResource("LabelSettings_pfcdr")
horizontal_alignment = 1

[node name="ContinueButton" type="Button" parent="GameOverLayer/Rect/H"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
text = "Continue"

[node name="SettingsLayer" type="CanvasLayer" parent="."]

[node name="Rect" type="NinePatchRect" parent="SettingsLayer"]
visible = false
self_modulate = Color(0, 0, 0, 0.647059)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 100.0
offset_top = 100.0
offset_right = -100.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
texture = ExtResource("3_dry2n")
patch_margin_left = 24
patch_margin_top = 24
patch_margin_right = 24
patch_margin_bottom = 24

[node name="H" type="VBoxContainer" parent="SettingsLayer/Rect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 571.0
offset_right = -571.0
offset_bottom = -179.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
theme_override_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="SettingsLayer/Rect/H"]
layout_mode = 2
text = "Settings"
label_settings = SubResource("LabelSettings_pfcdr")
horizontal_alignment = 1

[node name="BackButton" type="Button" parent="SettingsLayer/Rect/H"]
layout_mode = 2
size_flags_vertical = 4
text = "Back to Game"

[node name="ConcedeButton" type="Button" parent="SettingsLayer/Rect/H"]
layout_mode = 2
size_flags_vertical = 4
text = "Concede"

[node name="QuitButton" type="Button" parent="SettingsLayer/Rect/H"]
layout_mode = 2
size_flags_vertical = 4
text = "Quit"

[node name="UpgradeSelectUI" parent="." instance=ExtResource("4_g2u0c")]
visible = false

[connection signal="game_over" from="BoardNode" to="." method="_on_board_node_game_over"]
[connection signal="pressed" from="UILayer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="GameOverLayer/Rect/H/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="SettingsLayer/Rect/H/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="SettingsLayer/Rect/H/ConcedeButton" to="." method="_on_concede_button_pressed"]
[connection signal="pressed" from="SettingsLayer/Rect/H/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="upgrade_chosen" from="UpgradeSelectUI" to="." method="_on_upgrade_select_ui_upgrade_chosen"]
